# faas_memez_poopyy

./: README.md  poopyy.yml
poopyy/: dep-requirements-1.txt  dep-requirements-2.txt  dep-requirements-3.txt  handler.py  poopyy.html  pyproject.toml  requirements.txt
